...
                        </button>
                        <button verticalHuggingPriority="750" horizontalCompressionResistancePriority="150" verticalCompressionResistancePriority="150" translatesAutoresizingMaskIntoConstraints="NO" id="tkS-gq-Cbs" userLabel="Prefs Button">
                            <rect key="frame" x="520" y="14" width="14" height="14"/>
                            <constraints>
                                <constraint firstAttribute="width" secondItem="tkS-gq-Cbs" secondAttribute="height" multiplier="1:1" id="8lS-9s-VYO"/>
                            </constraints>
                            <buttonCell key="cell" type="smallSquare" title="Preferences" bezelStyle="smallSquare" image="NSAdvanced" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyUpOrDown" inset="2" id="69E-e8-wPO">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                <font key="font" metaFont="system"/>
                            </buttonCell>
                            <accessibility description="Preferences"/>
                            <connections>
                                <action selector="preferenceButtonPressed:" target="-2" id="8XC-SQ-bNP"/>
...
                        <real value="3.4028234663852886e+38"/>
                    </customSpacing>
                </stackView>
                <stackView identifier="ptnstack" distribution="fill" orientation="horizontal" alignment="top" spacing="1" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BPo-6t-Flu" userLabel="PTN Stack">
                    <rect key="frame" x="329" y="153" width="544" height="110"/>
                    <subviews>
                        <customView identifier="pcombo" verticalHuggingPriority="750" verticalCompressionResistancePriority="850" translatesAutoresizingMaskIntoConstraints="NO" id="4Lo-U3-YED" userLabel="Project combo" customClass="AutoCompletingField" customModule="whatdid" customModuleProvider="target">
                            <rect key="frame" x="5" y="84" width="120" height="21"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="21" placeholder="YES" id="AzF-nE-4ig"/>
                                <constraint firstAttribute="width" constant="120" id="pXy-Lw-dxJ"/>
                            </constraints>
                        </customView>
...
                            <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="/" id="BDY-kG-XxF">
                                <font key="font" usesAppearanceFont="YES"/>
                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                            </textFieldCell>
                        </textField>
                        <customView identifier="tcombo" verticalHuggingPriority="750" verticalCompressionResistancePriority="850" translatesAutoresizingMaskIntoConstraints="NO" id="sxc-2C-mp9" userLabel="Task combo" customClass="AutoCompletingField" customModule="whatdid" customModuleProvider="target">
                            <rect key="frame" x="134" y="84" width="156" height="21"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="21" placeholder="YES" id="cLS-DE-x90"/>
                            </constraints>
                        </customView>
                        <textField identifier="tndiv" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="CYa-f2-vpT" userLabel="TN divider">
...
