...
    var goalHook: ((String) -> Void)?
    
    private static func createAddButton() -> NSButton {
        let button = NSButton(title: "+⃣", target: self, action: nil)
        button.isBordered = false
        button.controlSize = .small
        button.toolTip = "Add new goal"
        button.setAccessibilityEnabled(true)
        button.setAccessibilityElement(true)
        button.setAccessibilityLabel(button.toolTip)
        button.setAccessibilityIdentifier(button.toolTip)
        button.setAccessibilityRole(.button)
        return button
...
