// whatdidUITests?

import XCTest
@testable import whatdid

class PtnViewControllerTest: XCTestCase {
    private static let SOME_TIME = Date()
    private var app : XCUIApplication!
    /// A point within the status menu item. See `clickStatusMenu()`
    private var statusItemPoint: CGPoint!

    override func setUp() {
        continueAfterFailure = false
        app = XCUIApplication()
        launch(withEnv: startupEnv(suppressTutorial: true))

        let now = Date()
        log("Finished setup at \(now.utcTimestamp) (\(now.timestamp(at: TimeZone(identifier: "US/Eastern")!)))")
    }
    
    private func launch(withEnv env: [String: String]) {
        app.launchEnvironment = env
        app.launch()
        findStatusMenuItem()
    }
    
    func findStatusMenuItem() {
        activate()
        // The 0.5 isn't necessary, but it positions the cursor in the middle of the item. Just looks nicer.
        let menuItem = XCUIApplication().menuBars.children(matching: .statusItem).element(boundBy: 0)
        menuItem.coordinate(withNormalizedOffset: CGVector(dx: 0.5, dy: 0.5)).hover()
        statusItemPoint = CGEvent(source: nil)?.location
    }
    
    override func recordFailure(withDescription description: String, inFile filePath: String, atLine lineNumber: Int, expected: Bool) {
        let now = Date()
        log("Failed at \(now.utcTimestamp) (\(now.timestamp(at: TimeZone(identifier: "US/Eastern")!)))")
        super.recordFailure(withDescription: description, inFile: filePath, atLine: lineNumber, expected: expected)
    }
    
    func openPtn(andThen afterAction: (XCUIElement) -> () = {_ in }) -> Ptn {
        return group("open PTN") {
            switch openWindow {
            case .none:
                clickStatusMenu()
            case let .some(w) where w.title == WindowType.ptn.windowTitle:
                break
            case let .some(w) where WindowType.allCases.map({$0.windowTitle}).contains(w.title):
                clickStatusMenu()
                wait(for: "window to close", until: {openWindow == nil})
                sleepMillis(500)
                clickStatusMenu()
            case let .some(w):
                XCTFail("unexpected window: \(w.title)")
            }
            waitForTransition(of: .ptn, toIsVisible: true)
            let ptn = findPtn()
            afterAction(ptn.window)
            return ptn
        }
    }
    
    func findPtn() -> Ptn {
        let ptn = app.windows[WindowType.ptn.windowTitle]
        return Ptn(
            window: ptn,
            pcombo: AutocompleteFieldHelper(element: ptn.comboBoxes["pcombo"]),
            tcombo: AutocompleteFieldHelper(element: ptn.comboBoxes["tcombo"]))
    }
    
    func clickStatusMenu(with flags: CGEventFlags = []){
        // In headless mode (or whatever GH actions uses), I can't just use the XCUIElement's `click()`
        // when the app is in the background. Instead, I fetched the status item's location during setUp, and
        // now directly post the click events to it.
        group("Click status menu") {
            for eventType in [CGEventType.leftMouseDown, CGEventType.leftMouseUp] {
                clickEvent(.left, eventType, at: statusItemPoint, with: flags)
            }
        }
    }
    
    func dragStatusMenu(to newX: CGFloat) {
        group("Drag status menu") {
            clickEvent(.left, .leftMouseDown, at: statusItemPoint, with: .maskCommand)
            clickEvent(.left, .leftMouseUp, at: CGPoint(x: newX, y: statusItemPoint.y), with: [])
            let oldPoint = statusItemPoint!
            findStatusMenuItem()
            
            addTeardownBlock {
                self.group("Drag status menu back") {
                    self.clickEvent(.left, .leftMouseDown, at: self.statusItemPoint, with: .maskCommand)
                    self.clickEvent(.left, .leftMouseUp, at: oldPoint, with: [])
                    self.findStatusMenuItem()
                }
            }
        }
    }
    
    /// Clicks on the leftmost element of the date picker, to select its "hours" segment. Otherwise, the system can click
    /// on anywhere in it, and might choose e.g. the AM/PM part.
    func clickOnHourSegment(of datePicker: XCUIElement) {
        datePicker.click(using: .frame(xInlay: 1.0/6))
    }

    override func tearDownWithError() throws {
        XCUIApplication().terminate()
    }
    
    func testTutorial() {
        let tutorialPopover = group("restart app with tutorial") {() -> XCUIElement in
            launch(withEnv: startupEnv(suppressTutorial: false))
            return app.windows[WindowType.ptn.windowTitle].popovers.element
        }
        let tutorialWelcomeText = "This window will pop up every so often to ask you what you've been up to."
        let tutorialProjectText = "Enter the project you've been working on."
        
        group("Spot check tutorial text") {
            XCTAssertEqual(
                1,
                tutorialPopover.staticTexts.allElementsBoundByIndex.filter({$0.stringValue.contains(tutorialWelcomeText)}).count
            )
        }
        group("Set launch-on-login") {
            // Set launch-on-login
            let launchOnLogin = tutorialPopover.checkBoxes.element
            XCTAssertEqual(false, launchOnLogin.value as? Bool)
            launchOnLogin.click()
            // not super interesting so far, but we'll also check the pref later
            XCTAssertEqual(true, launchOnLogin.value as? Bool)
        }
        group("Set global shortcut") {
            let recordShortcutSearchField = tutorialPopover.searchFields["Record Shortcut"]
            
            recordShortcutSearchField.click()
            recordShortcutSearchField.typeKey("u", modifierFlags:[.command, .shift])
            XCTAssertEqual(recordShortcutSearchField.stringValue, "⇧⌘U")
        }
        group("Next tutorial pane") {
            tutorialPopover.buttons[">"].click()
            XCTAssertEqual(
                1,
                tutorialPopover.staticTexts.allElementsBoundByIndex.filter({$0.stringValue.contains(tutorialProjectText)}).count
            )
        }
        group("Previous tutorial pane") {
            tutorialPopover.buttons["<"].click()
            XCTAssertEqual(
                1,
                tutorialPopover.staticTexts.allElementsBoundByIndex.filter({$0.stringValue.contains(tutorialWelcomeText)}).count
            )
        }
        group("Close the tutorial") {
            tutorialPopover.buttons["Done"].click()
            wait(for: "tutorial to close", until: {app.windows[WindowType.ptn.windowTitle].popovers.count == 0})
        }
        group("Tutorial doesn't open at next PTN open") {
            group("close PTN") {
                clickStatusMenu()
                waitForTransition(of: .ptn, toIsVisible: false)
                XCTAssertEqual(0, app.windows[WindowType.ptn.windowTitle].popovers.count)
            }
            group("reopen PTN using configured shortcut") {
                pressHotkeyShortcut(keyCode: 0x20) // 0x20 is "u"
                waitForTransition(of: .ptn, toIsVisible: true)
                XCTAssertEqual(0, app.windows[WindowType.ptn.windowTitle].popovers.count)
            }
        }
        group("check preferences") {
            let ptnWindow = app.windows[WindowType.ptn.windowTitle]
            ptnWindow.buttons["Preferences"].click()
            let prefsSheet = ptnWindow.sheets.firstMatch
            XCTAssertTrue(prefsSheet.isVisible)
            group("General tab") {
                prefsSheet.tabs["General"].click()
                XCTAssertEqual(true, prefsSheet.checkBoxes["Launch at Login"].value as? Bool)
                prefsSheet.checkBoxes["Launch at Login"].click() // turn off launch-at-login
                XCTAssertEqual("⇧⌘U", prefsSheet.searchFields["Record Shortcut"].stringValue)
            }
            group("Show tutorial again") {
                prefsSheet.tabs["Help & Feedback"].click()
                prefsSheet.buttons["Show tutorial again"].click()
                wait(for: "preferences sheet to close", until: {ptnWindow.exists && ptnWindow.sheets.count == 0})
                wait(for: "tutorial to open", until: {app.windows[WindowType.ptn.windowTitle].popovers.count == 1})
                XCTAssertEqual(
                    1,
                    tutorialPopover.staticTexts.allElementsBoundByIndex.filter({$0.stringValue.contains(tutorialWelcomeText)}).count
                )
                // The "launch at login" and "record shortcut" controls should *not* be there this time
                XCTAssertEqual(0, tutorialPopover.checkBoxes.count)
                XCTAssertFalse(prefsSheet.searchFields["Record Shortcut"].exists)
            }
        }
    }
    
    func testGoals() {
        group("no goals") {
            clickStatusMenu(with: .maskAlternate)
            let goalsReport = openWindow!.groups["Today's Goals"]
            XCTAssertEqual(
                ["No goals for today."],
                goalsReport.staticTexts.allElementsBoundByIndex.map({$0.stringValue}))
            XCTAssertEqual([], goalsReport.checkBoxes.allElementsBoundByIndex.map({$0.title}))
            
            openWindow!.typeKey(.downArrow) // date picker is selected by default, so this goes 1 month earlier
            XCTAssertEqual(
                ["No goals for this time range."],
                goalsReport.staticTexts.allElementsBoundByIndex.map({$0.stringValue}))
            XCTAssertEqual([], goalsReport.checkBoxes.allElementsBoundByIndex.map({$0.title}))
            clickStatusMenu()
        }
        
        group("fast-forward to goals prompt") {
            setTimeUtc(h: 06, m: 59)
            handleLongSessionPrompt(on: .ptn, .startNewSession)
            setTimeUtc(h: 07, m: 00)
        }
        group("enter goals for day 1") {
            let goals = find(.morningGoals)
            group("validate initial") {
                XCTAssertEqual([""], goals.textFields.allElementsBoundByIndex.map({$0.stringValue}))
                XCTAssertEqual("Dismiss without setting goals", goals.buttons.allElementsBoundByIndex.last?.title)
            }
            group("start typing") {
                goals.textFields.element(boundBy: 0).typeText("first attempt")
                XCTAssertEqual(1, goals.textFields.count)
                XCTAssertEqual("Save", goals.buttons.allElementsBoundByIndex.last?.title)
            }
            group("delete text via trash icon") {
                goals.buttons.element(boundBy: 0).click()
                XCTAssertEqual([""], goals.textFields.allElementsBoundByIndex.map({$0.stringValue}))
                XCTAssertEqual("Dismiss without setting goals", goals.buttons.allElementsBoundByIndex.last?.title)
            }
            group("type some more") {
                goals.textFields.element(boundBy: 0).typeText("second attempt")
                XCTAssertEqual(1, goals.textFields.count)
                XCTAssertEqual("Save", goals.buttons.allElementsBoundByIndex.last?.title)
            }
            group("delete text via command-a") {
                let field = goals.textFields.element(boundBy: 0)
                field.typeKey("a", modifierFlags: .command)
                field.typeKey(.delete)
                XCTAssertEqual([""], goals.textFields.allElementsBoundByIndex.map({$0.stringValue}))
                XCTAssertEqual("Dismiss without setting goals", goals.buttons.allElementsBoundByIndex.last?.title)
            }
            group("enter a goal and then delete it") {
                goals.textFields.element(boundBy: 0).typeText("third attempt\r")
                XCTAssertEqual(["third attempt", ""], goals.textFields.allElementsBoundByIndex.map({$0.stringValue}))
                XCTAssertEqual("Save", goals.buttons.allElementsBoundByIndex.last?.title)

                goals.buttons.element(boundBy: 0).click()
                pauseToLetStabilize() // not sure why, but seems to be needed
                XCTAssertEqual([""], goals.textFields.allElementsBoundByIndex.map({$0.stringValue}))
                XCTAssertEqual("Dismiss without setting goals", goals.buttons.allElementsBoundByIndex.last?.title)
            }
            group("type some entries") {
                goals.typeText("day 1 goal 1\r")
                goals.typeText("delete-me a\r")
                goals.typeText("delete-me b\r")
                goals.typeText("delete-me c\r")
                goals.typeText("day 1 goal 2\r")
                XCTAssertEqual(6, goals.textFields.count) // the 4 above, plus the empty one at the end
            }
            group("delete middle entries") {
                group("delete-me a") {
                    goals.textFields.element(boundBy: 1).deleteText(andReplaceWith: "") // "delete-me a"
                    XCTAssertEqual(6, goals.textFields.count) // we haven't finished editing yet, so it's still there
                }
                group("delete-me b") {
                    // grab focus on "delete-me b", which should cause a to delete. b should keep its focus
                    goals.textFields.element(boundBy: 2).click()
                    pauseToLetStabilize()
                    XCTAssertEqual(["delete-me b"], goals.textFields.allElementsBoundByIndex.filter({$0.hasFocus}).map({$0.stringValue}))
                    goals.deleteText(andReplaceWith: "\r")
                }
                group("delete-me c") {
                    pauseToLetStabilize()
                    // a and b are both gone now, so c is at index 1 (with "day 1 goal 1" at 0)
                    goals.buttons.element(boundBy: 1).click()
                }
                group("final validation") {
                    pauseToLetStabilize()
                    XCTAssertEqual(
                        ["day 1 goal 1", "day 1 goal 2", ""],
                        goals.textFields.allElementsBoundByIndex.map({$0.stringValue}))
                }
            }
            group("save") {
                goals.buttons.allElementsBoundByIndex.last?.click()
                waitForTransition(of: .morningGoals, toIsVisible: false)
            }
        }
        group("goals are in PTN") {
            clickStatusMenu()
            waitForTransition(of: .ptn, toIsVisible: true)
            let ptnGoals = openWindow!.groups["Goals for today"]
            XCTAssertEqual(["day 1 goal 1", "day 1 goal 2"], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.title}))
            XCTAssertEqual([false, false], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.value as? Bool}))
        }
        group("smoke test of PTN goals") {
            // note: We test this view more extensively in ComponentUITests.testGoalsView
            let ptnGoals = openWindow!.groups["Goals for today"]
            group("complete one goal") {
                ptnGoals.checkBoxes.element(boundBy: 1).click()
                XCTAssertEqual(["day 1 goal 1", "day 1 goal 2"], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.title}))
                XCTAssertEqual([false, true], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.value as? Bool}))
            }
            group("dismiss the window") {
                clickStatusMenu()
                waitForTransition(of: .ptn, toIsVisible: false)
            }
            group("bring window back and confirm goal still selected") {
                clickStatusMenu()
                waitForTransition(of: .ptn, toIsVisible: true)
                XCTAssertEqual(["day 1 goal 1", "day 1 goal 2"], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.title}))
                XCTAssertEqual([false, true], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.value as? Bool}))
                clickStatusMenu()
                waitForTransition(of: .ptn, toIsVisible: false)
            }
        }
        group("go to next day") {
            setTimeUtc(d: 1, h: 06, m: 59)
            waitForTransition(of: .dailyEnd, toIsVisible: true)
            clickStatusMenu()
            handleLongSessionPrompt(on: .ptn, .startNewSession)
        }
        group("goals prompt does not activate app") {
            setTimeUtc(d: 1, h: 11, m: 00, deactivate: true)
            waitForTransition(of: .morningGoals, toIsVisible: true)
            sleep(1) // If it was going to be switch to active, this would be enough time
            XCTAssertEqual(XCUIApplication.State.runningBackground, app.state)
        }
        group("enter a goal without hitting enter") {
            let goals = find(.morningGoals)
            goals.textFields.element(boundBy: 0).click()
            goals.typeText("day 2 goal 1\r")
            goals.typeText("day 2 goal 2") // no "\r" !
            XCTAssertEqual(["day 2 goal 1", "day 2 goal 2"], goals.textFields.allElementsBoundByIndex.map({$0.stringValue}))
            group("save") {
                goals.buttons.allElementsBoundByIndex.last?.click()
                waitForTransition(of: .morningGoals, toIsVisible: false)
            }
        }
        group("complete one goal") {
            waitForTransition(of: .ptn, toIsVisible: true) // after the goals get saved
            let ptnGoals = openWindow!.groups["Goals for today"]
            group("complete one goal") {
                ptnGoals.checkBoxes.element(boundBy: 1).click()
                XCTAssertEqual(["day 2 goal 1", "day 2 goal 2"], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.title}))
                XCTAssertEqual([false, true], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.value as? Bool}))
            }
            dismiss(window: .ptn)
        }
        group("wait for daily report") {
            setTimeUtc(d: 1, h: 20, m: 00)
            waitForTransition(of: .dailyEnd, toIsVisible: true)
            let goalsReport = openWindow!.groups["Today's Goals"]
            XCTAssertEqual(["Completed 1 goal out of 2."], goalsReport.staticTexts.allElementsBoundByIndex.map({$0.stringValue}))
            XCTAssertEqual(["day 2 goal 1", "day 2 goal 2"], goalsReport.checkBoxes.allElementsBoundByIndex.map({$0.title}))
            XCTAssertEqual([false, true], goalsReport.checkBoxes.allElementsBoundByIndex.map({$0.value as? Bool}))
        }
        group("look at historical report") {
            // The date picker is already active, so just tab to its date field
            let window = openWindow!
            window.typeText("\t\t")
            window.typeKey(.downArrow)
            
            let goalsReport = openWindow!.groups["Today's Goals"]
            XCTAssertEqual(
                ["Completed 2 goals out of 4.", "(not listing them, because you selected more than one day)"],
                goalsReport.staticTexts.allElementsBoundByIndex.map({$0.stringValue}))
            XCTAssertEqual([], goalsReport.checkBoxes.allElementsBoundByIndex.map({$0.title}))
            clickStatusMenu() // dismiss the gaily goal
        }
        group("status menu icon to dismiss goals") {
            group("ff to next morning") {
                setTimeUtc(d: 2, h: 09, m: 00) // next day
                handleLongSessionPrompt(on: .ptn, .startNewSession)
                waitForTransition(of: .morningGoals, toIsVisible: true)
            }
            group("type a goal") {
                let goals = find(.morningGoals)
                goals.textFields.element(boundBy: 0).click()
                goals.typeText("goal 1")
            }
            group("dismiss via status menu icon") {
                clickStatusMenu()
                XCTAssertNotNil(openWindow)
                openWindow!.sheets["alert"].buttons["Don't Save"].click()
                waitForTransition(of: .morningGoals, toIsVisible: false)
            }
            group("open ptn and look at goals") {
                clickStatusMenu()
                waitForTransition(of: .ptn, toIsVisible: true)
                let ptnGoals = openWindow!.groups["Goals for today"]
                XCTAssertEqual([], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.title}))
            }
        }
        group("status menu icon to save goals") {
            group("ff to next morning") {
                setTimeUtc(d: 3, h: 09, m: 00) // next day
                handleLongSessionPrompt(on: .ptn, .startNewSession)
                waitForTransition(of: .dailyEnd, toIsVisible: true)
                clickStatusMenu()
                waitForTransition(of: .morningGoals, toIsVisible: true)
            }
            group("type a goal") {
                let goals = find(.morningGoals)
                goals.textFields.element(boundBy: 0).click()
                goals.typeText("goal 2")
            }
            group("save via status menu icon") {
                clickStatusMenu()
                XCTAssertNotNil(openWindow)
                openWindow!.sheets["alert"].buttons["Save"].click()
                waitForTransition(of: .morningGoals, toIsVisible: false)
            }
            group("open ptn and look at goals") {
                clickStatusMenu()
                waitForTransition(of: .ptn, toIsVisible: true)
                let ptnGoals = openWindow!.groups["Goals for today"]
                XCTAssertEqual(["goal 2"], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.title}))
            }
        }
        group("push dismiss button without setting goals") {
            group("ff to next morning") {
                setTimeUtc(d: 4, h: 09, m: 00) // next day
                handleLongSessionPrompt(on: .ptn, .startNewSession)
                waitForTransition(of: .dailyEnd, toIsVisible: true)
                clickStatusMenu()
                waitForTransition(of: .morningGoals, toIsVisible: true)
            }
            group("dismiss button") {
                let goals = find(.morningGoals)
                XCTAssertEqual("Dismiss without setting goals", goals.buttons.allElementsBoundByIndex.last?.title)
                goals.buttons.allElementsBoundByIndex.last?.click()
                waitForTransition(of: .morningGoals, toIsVisible: false)
            }
            group("open ptn and look at goals") {
                clickStatusMenu()
                waitForTransition(of: .ptn, toIsVisible: true)
                let ptnGoals = openWindow!.groups["Goals for today"]
                XCTAssertEqual([], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.title}))
            }
            group("add a goal") {
                // this lets us confirm that the next step also resets the session
                let ptnWindow = find(.ptn)
                let goalsView = ptnWindow.children(matching: .group).matching(identifier: "Goals for today").element
                XCTAssertTrue(goalsView.exists)
                goalsView.buttons["Add new goal"].click()
                let textField = goalsView.children(matching: .textField).element
                XCTAssertTrue(textField.isVisible)
                textField.typeText("goal again\r")
            }
        }
        group("dismiss via status menu without any goals entered") {
            group("ff to next morning") {
                setTimeUtc(d: 5, h: 09, m: 00) // next day
                handleLongSessionPrompt(on: .ptn, .startNewSession)
                waitForTransition(of: .dailyEnd, toIsVisible: true)
                clickStatusMenu()
                waitForTransition(of: .morningGoals, toIsVisible: true)
            }
            // don't type a goal
            group("dismiss via status menu icon") {
                clickStatusMenu()
                waitForTransition(of: .morningGoals, toIsVisible: false)
            }
            group("open ptn and look at goals") {
                clickStatusMenu()
                waitForTransition(of: .ptn, toIsVisible: true)
                let ptnGoals = openWindow!.groups["Goals for today"]
                XCTAssertEqual([], ptnGoals.checkBoxes.allElementsBoundByIndex.map({$0.title}))
            }
        }
    }
    
    func testScheduling() {
